meegotouchhome (0.22.7~1) unstable; urgency=low

  * [UNRELEASED]

 -- Vesa Halttunen <vesa.halttunen@nokia.com>  Fri, 12 Nov 2010 12:11:59 +0200

meegotouchhome (0.22.6-1) unstable; urgency=low

  * Fixes: NB#203728 - Recents view freezes and shows only weird minimal icons

 -- Vesa Halttunen <vesa.halttunen@nokia.com>  Fri, 12 Nov 2010 11:41:26 +0200

meegotouchhome (0.22.5-1) unstable; urgency=low

  * Fixes: NB#202257 - Device reboots after pressing Ctrl-q four times

 -- Vesa Halttunen <vesa.halttunen@nokia.com>  Thu, 04 Nov 2010 14:31:11 +0300

meegotouchhome (0.22.4-1) unstable; urgency=low

  * Fixes: NB#190081 - call and search applications open on using hkb keys(* and ')') quickly in home screen

 -- Vesa Halttunen <vesa.halttunen@nokia.com>  Thu, 28 Oct 2010 16:50:13 +0300

meegotouchhome (0.22.3-1) unstable; urgency=low

  * Don't rotate the screen while switcher mode change is in progress

 -- Vesa Halttunen <vesa.halttunen@nokia.com>  Wed, 20 Oct 2010 13:33:44 +0300

meegotouchhome (0.22.2-1) unstable; urgency=low

  * Fixes: NB#197319 - Duihome hogs CPU after vigorous installing

 -- Vesa Halttunen <vesa.halttunen@nokia.com>  Mon, 18 Oct 2010 09:34:26 +0300

meegotouchhome (0.22.1-1) unstable; urgency=low

  * Fixes: NB#194052 - Object names used to change style for progress indicators
  * Fixes: NB#194106 - Launcher progress indicator spinner keeps spinning even after the application has started
  * Fixes: NB#186716 - Homescreen updates the display when touched even if nothing happens

 -- Vesa Halttunen <vesa.halttunen@nokia.com>  Thu, 07 Oct 2010 15:07:03 +0300

meegotouchhome (0.22.0-1) unstable; urgency=low

  * Implemented: SWP#DUI-3338 Rename duihome to follow MeeGo component naming convention.

 -- Vesa Halttunen <vesa.halttunen@nokia.com>  Mon, 27 Sep 2010 18:26:01 +0300

duihome (0.21.22-1) unstable; urgency=low

  * Fixes: NB#190663 - aspect ratio of the clock is not maintained when minimised
